# ember

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  plan.md  session-log.md  sync-db.sh
backend/: pyproject.toml
backend/app/: brief.py  config.py  database.py  ical.py  main.py  models.py  notifications.py  scheduler.py  schemas.py
backend/app/routers/: labels.py  lists.py  projects.py  push.py  reminders.py  sections.py  tasks.py  views.py
backend/tests/: test_api.py
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.json  sw.js
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/: AddTask.jsx  CalendarView.jsx  EmberFlame.jsx  FilteredTaskView.jsx  IconPicker.jsx  LabelPicker.jsx  ListDetail.jsx  MobileCapture.jsx  RemindersView.jsx  SearchPalette.jsx  Sidebar.jsx  TaskItem.jsx  TaskList.jsx  TaskModal.jsx  TaskView.jsx  ThemeToggle.jsx  TimePicker.jsx
frontend/src/lib/: dates.js  expandedTasks.js  icons.jsx  nlParser.js  priority.js  push.js  useClickOutside.js  useIsMobile.js
mcp_server/: Dockerfile  pyproject.toml  server.py
