[project]
name = "todo-backend"
version = "0.1.0"
description = "Self-hosted task manager backend (FastAPI + SQLite)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "caldav>=1.3",
    "pywebpush>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
